# hyburn

./: .gitattributes  .gitignore  AGENTS.md  CODE_AUDIT.md  Cargo.toml  HISTORY.md  README.md
.github/workflows/: ci.yml  deploy-wasm-pages.yml
.opencode/plans/: code-review-fixes.md  feature-parity.md
docs/: BENCHMARK.md  BENCHMARK_EXAMPLES.md  BURN.md  PERFORMANCE.md  crosscoder-sbi-feature-analysis.md  crosscoder-sbi-implementation-plan.md  sbi-report-sample.html
examples/: crosscoder_sim.toml  demo.toml  g2do_bold.toml  g2do_simple.toml  g2do_sweep.toml  gpu_wgpu.toml  init_g2do_74.npy  init_jr_74.npy  init_kuramoto_74.npy  init_wc_74.npy  jansen_rit_evoked.toml  mpr_sweep.toml  pipeline_prior.toml  sbi-report.toml  stimulus_patterns.toml  sweep.toml  sweep_mpr.toml  sweep_multi_param.toml  two_population_coupled.toml  whole_brain_multi_model.toml  wilson_cowan_ring.toml
examples/bench/: hyburn_bench_batch_sweep.rs  hyburn_bench_generic_cuda.rs  hyburn_bench_gpu.rs  hyburn_bench_gpu_mini.rs
ref/: README.md  configs.py  generate_bold.py  generate_coupling_hyburn.py  generate_coupling_parity.py  generate_features.py  generate_jr_psd_sweep.py  generate_single_sim.py  generate_sweep.py  setup.sh  verify_coupling_semantics.py
ref/bold/: g2do_bold_bold.npy  g2do_bold_neural.npy  g2do_small_bold.npy  g2do_small_bold_neural.npy
ref/coupling_semantics/: Difference_classic.npy  Difference_classic_config.json  Difference_hybrid_fixed.npy  Difference_hyburn.npy  Difference_hyburn_config.json  Kuramoto_classic.npy  Kuramoto_classic_config.json  Kuramoto_hybrid_code.npy  Kuramoto_hybrid_fixed.npy  Kuramoto_hyburn.npy  Kuramoto_hyburn_config.json  Linear_b0.1_classic_config.json  Linear_b0.1_hybrid_doc.npy  Linear_b0_classic.npy  Linear_b0_classic_config.json  PreSigmoidal_dynamic_classic.npy  PreSigmoidal_dynamic_classic_config.json  PreSigmoidal_static_classic.npy  PreSigmoidal_static_classic_config.json  ScaledLinear_classic.npy  ScaledLinear_classic_config.json  SigmoidalJansenRit_classic.npy  SigmoidalJansenRit_classic_config.json  SigmoidalJansenRit_hyburn.npy  SigmoidalJansenRit_hyburn_config.json  Sigmoidal_classic.npy  Sigmoidal_classic_config.json  Sigmoidal_hyburn.npy  Tanh_classic.npy  Tanh_classic_config.json  Tanh_hybrid_code.npy  Tanh_hybrid_doc.npy  comparison.json  g2do_linear_weak_final.npy  g2do_linear_weak_final_config.json  weights.npy  x_i.npy  x_j.npy  x_j_2cvar.npy
ref/features/: g2do_small_v0_classic_features.npy  g2do_small_v0_spectral_features.npy  g2do_small_v0_temporal_features.npy  g2do_small_v1_classic_features.npy  g2do_small_v1_spectral_features.npy  g2do_small_v1_temporal_features.npy  kuramoto_small_v0_classic_features.npy  kuramoto_small_v0_spectral_features.npy  kuramoto_small_v0_temporal_features.npy  mpr_small_v0_classic_features.npy  mpr_small_v0_fc_features.npy  mpr_small_v0_spectral_features.npy  mpr_small_v0_temporal_features.npy  mpr_small_v1_classic_features.npy  mpr_small_v1_spectral_features.npy  mpr_small_v1_temporal_features.npy
ref/jr_psd_sweep/: conn_delays.npy  conn_weights.npy  coupling_values.npy  coupling_values_10node.npy  freqs.npy  freqs_10node.npy  psd_mean.npy  psd_mean_10node.npy  spectral_features_10node.npy  voi0_mean_10node.npy
ref/single_sim/: g2do_74_final_state.npy  g2do_74_trajectory.npy  g2do_small_final_state.npy  g2do_small_trajectory.npy  kuramoto_small_final_state.npy  kuramoto_small_trajectory.npy  mpr_small_final_state.npy  mpr_small_trajectory.npy
ref/sweep/: g2do_I_ext_sweep_final_states.npy  g2do_I_ext_sweep_mean_traj.npy
scripts/: check_vbjax_api.py  gen_presets.py  validate_crosscoder_vbjax.py
src/: cli.rs  config.rs  error.rs  io.rs  lib.rs  main.rs  presets.rs  report.rs  test_burn_api.rs  wasm.rs  wasm_tests.rs
src/engine/: autotune.rs  bold.rs  bold_monitor.rs  construction.rs  coupling.rs  integrator.rs  mod.rs  monitor.rs  runtime.rs  sparse.rs  stimulus.rs  subnetwork.rs  sweep.rs  sweep_gpu.rs
src/model/: coombes_byrne.rs  coombes_byrne2d.rs  deco_balanced_exc_inh.rs  dumont_gutkin.rs  epileptor.rs  epileptor2d.rs  epileptor_codim3.rs  epileptor_codim3_slowmod.rs  epileptor_rs.rs  g2do.rs  gast_schmidt_knosche_sd.rs  gast_schmidt_knosche_sf.rs  hopfield.rs  jansen_rit.rs  kionex.rs  kuramoto_model.rs  larter_breakspear.rs  linear.rs  mod.rs  mpr.rs  reduced_fhn.rs  reduced_hr.rs  rww.rs  rww_exc_inh.rs  sup_hopf.rs  wilson_cowan.rs  zerlaut_first.rs  zerlaut_second.rs  zetterberg_jansen.rs
src/sbi/: config.rs  crosscoder.rs  crosscoder_cohort.rs  crosscoder_pipeline.rs  crosscoder_train.rs  crosscoder_validate.rs  dataset.rs  diagnostics.rs  made.rs  maf.rs  mod.rs  priors.rs  train.rs
tests/: coupling_reference_test.rs  cuda_integration.rs  e2e_sbi_pipeline.rs  gpu_integration.rs  integration_test.rs  model_reference_test.rs  monitor_integration.rs  reference_test.rs  wgpu_integration.rs
tests/fixtures/: README.md  coombes_byrne2d_ref.npy  coombes_byrne_ref.npy  dumont_gutkin_ref.npy  epileptor2d_ref.npy  epileptor_codim3_ref.npy  epileptor_codim3_slowmod_ref.npy  epileptor_ref.npy  epileptor_rs_ref.npy  gast_sd_ref.npy  gast_sf_ref.npy  hopfield_ref.npy  kionex_ref.npy  larter_breakspear_ref.npy  reduced_fhn_ref.npy  reduced_hr_ref.npy  rww_exc_inh_ref.npy  sup_hopf_ref.npy  zerlaut_first_ref.npy  zerlaut_second_ref.npy  zetterberg_jansen_ref.npy
tests/validate_output/: cohort_view1.npy  cohort_view2.npy  summary.json  vbjax_decoder_view1.npy  vbjax_decoder_view2.npy  vbjax_encoder_view1.npy  vbjax_encoder_view2.npy  (+3 more)
tools/config/hyburn-config/: Cargo.toml
tools/config/hyburn-config-lib/: Cargo.toml
tools/config/hyburn-config-lib/src/: completions.rs  editor.rs  json_schema.rs  lib.rs  path.rs  schema.rs
tools/config/hyburn-config/src/: main.rs
web/: build.sh  index.html  package-lock.json  package.json  playwright.config.ts  test-harness.html
(+40 files in other folders)
