[package]
name = "hyburn-config-lib"
version = "0.1.0"
edition = "2024"
description = "Schema engine for hyburn config files"

[dependencies]
hyburn = { path = "../../../", default-features = false }
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
toml = "0.8"
